<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvBases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_publico_general"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="24dp" />

    <Button
        android:id="@+id/btnGaleria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_margin="16dp"
        android:text="@string/btn_galeria" />

    <Button
        android:id="@+id/btnVotacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_margin="16dp"
        android:text="@string/btn_votar_fotos" />

    <Button
        android:id="@+id/btnRanking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_margin="16dp"
        android:text="@string/btn_ver_ranking" />
</LinearLayout>
