<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario_nombre"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="?android:textColorPrimary" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario_email"
            android:textSize="14sp"
            android:textColor="?android:textColorPrimary" />

        <TextView
            android:id="@+id/tvRol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario_rol_participante"
            android:textSize="14sp"
            android:textColor="?android:textColorPrimary" />

        <!-- Botón para eliminar usuario -->
        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eliminar"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp" />

        <!-- Botón para cambiar rol -->
        <Button
            android:id="@+id/btnToggleAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hacer_admin"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
